--- a/_config.yml
+++ b/_config.yml
@@ -125,15 +125,15 @@ navigation_header:
   url: /
 
 navigation_footer:
-- title: Created by Moabson
+- title: 
   url: https://#
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
-  Twitter: https://twitter.com/DavidDarnes
-  LinkedIn: https://www.linkedin.com/in/daviddarnes
-  GitHub: https://github.com/daviddarnes
-  link: https://darn.es
-  RSS: /feed.xml
+  Twitter: 
+  LinkedIn:
+  GitHub: 
+  link: 
+  RSS: 
 
 sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
   Twitter: "#0d94e7"
